# tezma

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_cmake.yml
cuda/: CmakeLists.txt
cuda/include/: cuda_ops_impl.h  test.h
cuda/src/: cuda_ops_impl.cu  main.cpp  test.cu
datasets/mnist/: x_test.tzn  y_test.tzn  y_train.tzn
examples/cuda_testing/: CmakeLists.txt  cuda_testing.cpp
examples/mnist/: CmakeLists.txt  mnist.cpp
examples/xor/: CmakeLists.txt  xor.cpp
include/: function.h  layers.h  network.h  tensor.h
scripts/: mnist_to_tzn.py  numpy_utils.py
src/: tezma.cpp
tests/: CmakeLists.txt  nettest.cpp  tensortest.cpp
tezma/: CMakeLists.txt
tezma/include/: activation.h  function.h  layer.h  loss.h  net.h  network.h  optimizer.h  serialization.h  tensor.h  tezma.h
tezma/include/cuda/: cuda_ops.h
tezma/include/tensor/: ops.h  tensor_base.h
tezma/src/: net.cpp  network.cpp  tensor.cpp  tezma.cpp
tezma/src/cuda/: cuda_ops.cpp
tezma/src/tensor/: tensor_base.cpp
